# ScalaPB

./: .gitignore  BUILD.bazel  WORKSPACE  dependencies.bzl  maven_install.json  setup_bazel_inputs.sh
project/: plugins.sbt
